# code-buddy

./: .env.example  .gitignore  README.md  chat_agent.py  pyproject.toml  run_chat.py  run_cli.py
config/: claude_desktop.json  default.yaml  development.yaml
src/client/: __init__.py  session.py
src/client/agents/: __init__.py  base_agent.py  coding_agent.py  tool_executor.py
src/client/llm/: __init__.py  base.py  openai_llm.py
src/client/ui/: __init__.py  cli.py
src/server/: __init__.py  config.py  main.py
src/server/prompts/: __init__.py  base.py  code_review.py  debug.py  documentation.py
src/server/resources/: __init__.py  base.py  config_resources.py  file_resources.py  project_resources.py
src/server/tools/: __init__.py  base.py  code_tools.py  command_tools.py  directory_tools.py  docker_tool.py  file_tools.py  git_tools.py  http_tools.py  search_tools.py
src/server/utils/: __init__.py  file_utils.py  mime_types.py  path_utils.py  patterns.py
src/shared/: __init__.py  constants.py  exceptions.py  logger.py  models.py
