[project]
name = "code-buddy"
version = "0.1.0"
description = "Your AI-powered coding companion for Claude Desktop - MCP server with 23+ development tools"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.23.1",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "openai>=2.9.0",
    "aiohttp>=3.13.2",
]
